@@ -1,19 +1,18 @@
 package com.bookstore.exception;
 
-import com.bookstore.dto.request.ApiResponse;
-
-import jakarta.validation.ConstraintViolation;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.access.AccessDeniedException;
-
 import java.util.Map;
 import java.util.Objects;
 
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+
+import com.bookstore.dto.request.ApiResponse;
+
+import jakarta.validation.ConstraintViolation;
+import lombok.extern.slf4j.Slf4j;
 
 @ControllerAdvice
 @Slf4j
@@ -24,55 +23,57 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(value = RuntimeException.class)
     ResponseEntity<ApiResponse> handlingRuntimeException(RuntimeException e) {
         ApiResponse<String> apiResponse = ApiResponse.<String>builder()
-            .message(ErrorCode.UNCATEGORIZED_EXCEPTION.getMessage())
-            .code(ErrorCode.UNCATEGORIZED_EXCEPTION.getCode())    
-        .build();
+                .message(ErrorCode.UNCATEGORIZED_EXCEPTION.getMessage())
+                .code(ErrorCode.UNCATEGORIZED_EXCEPTION.getCode())
+                .build();
         return ResponseEntity.badRequest().body(apiResponse);
     }
+
     @ExceptionHandler(value = AppException.class)
-    ResponseEntity<ApiResponse> handlingAppException(AppException e){
+    ResponseEntity<ApiResponse> handlingAppException(AppException e) {
         ErrorCode errorCode = e.getErrorCode();
         ApiResponse apiResponse = new ApiResponse();
         apiResponse.setCode(errorCode.getCode());
         apiResponse.setMessage(errorCode.getMessage());
         return ResponseEntity
-            .status(errorCode.getStatusCode())
-            .body(apiResponse);
+                .status(errorCode.getStatusCode())
+                .body(apiResponse);
 
     }
+
     @ExceptionHandler(value = MethodArgumentNotValidException.class)
-    ResponseEntity<ApiResponse> handlingValidation(MethodArgumentNotValidException exception){
+    ResponseEntity<ApiResponse> handlingValidation(MethodArgumentNotValidException exception) {
         String enumKey = exception.getFieldError().getDefaultMessage();
         ErrorCode errorCode = ErrorCode.UNCATEGORIZED_EXCEPTION;
         Map<String, Object> attributes = null;
         try {
             errorCode = ErrorCode.valueOf(enumKey);
-            
-            var constraintViolation = exception.getBindingResult().getAllErrors().getFirst().unwrap(ConstraintViolation.class);
+
+            var constraintViolation = exception.getBindingResult().getAllErrors().get(0)
+                    .unwrap(ConstraintViolation.class);
             attributes = constraintViolation.getConstraintDescriptor().getAttributes();
             log.info(attributes.toString());
-        } catch (IllegalArgumentException e){
+        } catch (IllegalArgumentException e) {
 
         }
         ApiResponse apiResponse = new ApiResponse();
         apiResponse.setCode(errorCode.getCode());
-        apiResponse.setMessage(Objects.nonNull(attributes) ?
-            mapAttributes(errorCode.getMessage(), attributes)
+        apiResponse.setMessage(Objects.nonNull(attributes) ? mapAttributes(errorCode.getMessage(), attributes)
                 : errorCode.getMessage());
         return ResponseEntity.badRequest().body(apiResponse);
     }
 
     @ExceptionHandler(value = AccessDeniedException.class)
-    ResponseEntity<ApiResponse> handlingAccessDeniedException( AccessDeniedException exception){
+    ResponseEntity<ApiResponse> handlingAccessDeniedException(AccessDeniedException exception) {
         ErrorCode errorCode = ErrorCode.UNAUTHORIZED;
         ApiResponse apiResponse = ApiResponse.builder()
-            .code(errorCode.getCode())
-            .message(errorCode.getMessage())
-        .build();
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .build();
         return ResponseEntity.status(errorCode.getStatusCode()).body(apiResponse);
     }
 
-    private String mapAttributes(String message, Map<String, Object> attributes){
+    private String mapAttributes(String message, Map<String, Object> attributes) {
         String minValue = String.valueOf(attributes.get(MIN_ATTRIBUTE));
         return message.replace("{" + MIN_ATTRIBUTE + "}", minValue);
     }
